.k3s/deployment.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      container:
        - name: app
          image: pedroimpulcetto/k3s:latest
          ports:
            - containerPort: 5000
