.k3s/services.yaml
apiVersion: v1
kind: Service
metada:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 5000
      targetPort: 5000
