.k3s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: myservicea.foo.org
      http:
        paths:
          - path: /
            backend:
              serviceName: app
              servicePort: 5000
